fixed skills spacing

--- a/custom.css
+++ b/custom.css
@@ -291,5 +291,6 @@ button.btn.btn-keyword:active {
   color: orange;
   border: none;
   font-weight: bold;
+  font-size: larger;
 }
 /*End of Skills Page */
